[package]
name = "hotboot"
version = "0.1.1"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/hotboot"
repository = "https://github.com/Ekleog/hotboot"
readme = "README.md"
keywords = [ "crypto", "cold", "boot" ]
categories = [ "cryptography" ]
description = """
Secure private data with a weak secret, using as a protection access control of
the system and defense especially designed against cold-boot attacks."""

[badges]
is-it-maintained-issue-resolution = { repository = "Ekleog/hotboot" }
is-it-maintained-open-issues = { repository = "Ekleog/hotboot" }
maintenance = { status = "passively-maintained" }

[dependencies]
openssl = "0.10.29"
